@@ -1,6 +1,10 @@
+2010-04-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* actors.py (Texture): Fixed a bug of texture show/hide behaviour.
+
 2010-04-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
-	* flickr/api.py: Improved codes for certification.
+	* flickr/api.py: Improved code for certification.
 	* flickr/authdialog.py (PluginFlickrDialog): Added a black magic
 	  for avoiding unintended GC for sub instances.
 
